<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/signup_scrollView"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/signup_email"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/signup_email"
               android:textColorHint="@color/gray"
               app:boxStrokeColor="@color/black"
               app:endIconMode="clear_text"
               app:endIconTint="@color/black"
               app:startIconTint="@color/black">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etSignup_email"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:inputType="textEmailAddress"
                   android:textColor="@color/black"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/signup_password"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/signup_password"
               android:textColorHint="@color/gray"
               app:boxStrokeColor="@color/black"
               app:endIconMode="password_toggle"
               app:endIconTint="@color/black"
               app:startIconTint="@color/black">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etSignup_password"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:inputType="numberPassword"
                   android:textColor="@color/black"/>
           </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_signup_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/signupProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>