<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/color_1"
    app:cardElevation="20dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/name_of_the_user"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/email_of_the_user"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/status_of_the_user"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>