<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:civ_border_color="#FF000000"/>
    <ImageView
        android:id="@+id/add_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="center"
        android:src="@drawable/plus"/>
    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/account_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        android:visibility="gone"
        app:endIconTint="@color/black"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtProfileMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/mail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileMail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:visibility="gone"
        app:boxStrokeColor="@color/black"
        app:endIconTint="@color/black"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtProfileStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileStatus"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileStatus"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileStatus"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:visibility="gone"
        app:boxStrokeColor="@color/black"
        app:endIconTint="@color/black"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProfileUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/light_blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProfileSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/light_blue"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/profile_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</LinearLayout>